changed api key

--- a/InterviewSimulator.Api/appsettings.json
+++ b/InterviewSimulator.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "Gemini": {
-    "ApiKey": "AIzaSyAgrbMrm9yUgizvarVGjBWm-N8gnVzIX3s",
+    "ApiKey": "Gemini_API_Key",
     "BaseUrl": "https://generativelanguage.googleapis.com/v1beta",
     "Model": "models/gemini-2.5-flash"
   },
@@ -10,6 +10,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "GeminiApiKey": "AIzaSyAgrbMrm9yUgizvarVGjBWm-N8gnVzIX3s",
+  "GeminiApiKey": "Gemini_API_Key",
   "AllowedHosts": "*"
 }
